fix: lang switcher shows in mobile top nav + images title z-index

--- a/wp-content/themes/caestus-wp/assets/css/app.css
+++ b/wp-content/themes/caestus-wp/assets/css/app.css
@@ -466,7 +466,7 @@ input.searchStuf {
 }
 
 .ghakteb {
-    z-index: 20 !important;
+    z-index: 0 !important;
 }
 
 
